# d20

./: .gitignore  AGENT_DOCS.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
d20/: __init__.py
datasets/coco12-formats/coco12-formats/images/train/: 000000000009.avif  000000000034.heic
datasets/coco12-formats/coco12-formats/images/val/: 000000000071.tif  000000000072.tiff
datasets/coco12-formats/coco12-formats/labels/train/: 000000000025.txt  000000000034.txt
docs/: FORMATS.md
src/d20/: __init__.py  cli.py  config.py  convert.py  export_cli.py  reporting.py  types.py
src/d20/formats/: __init__.py  base.py  coco.py  utils.py  voc.py  yolo.py
src/pillow/: __init__.py
tests/: test_cli.py  test_config.py  test_conversions.py  test_convert.py  test_formats_base.py  test_formats_coco.py  test_formats_voc.py  test_formats_yolo.py  test_reporting.py  test_types.py
tests/fixtures/datasets/coco12-formats/images/train/: 000000000030.dng
tests/fixtures/datasets/coco12-formats/images/val/: 000000000061.jp2
tests/utils/: downloader.py
