[project]
name = "d20"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "defusedxml",
    "fiftyone",
    "loguru>=0.7.0",
    "pillow",
    "pydantic>=2.0.0",
    "pyyaml",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
d20 = "d20.cli:main"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/d20", "src/pillow"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "NPY",  # NumPy-specific rules
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # flake8-logging-format
    "RSE",  # flake8-raise
    "ASYNC", # flake8-async
    "TID",  # flake8-tidy-imports
    "Q",    # flake8-quotes,
    "D",
    "FLY"
]
ignore = [
    "PLR2004", # magic value used in comparison
    "COM812",
    "D213",
    "D203",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["d20"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_any_unimported = true
disallow_any_expr = false  # Too strict for practical use
disallow_any_decorated = false  # Too strict for practical use
warn_incomplete_stub = true
strict_optional = true
strict = true  # Don't enable all strict flags, but enable most important ones


[[tool.mypy.overrides]]
module = [
    "fiftyone.*",
]
ignore_errors = true
follow_untyped_imports = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=d20",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy==1.19.0",
    "pandas-stubs>=2.3.3.260113",
    "scipy-stubs>=1.15.3.0",
    "types-cachetools>=6.2.0.20251022",
    "types-defusedxml>=0.7.0.20250822",
    "types-deprecated>=1.3.1.20251101",
    "types-networkx>=3.6.1.20251220",
    "types-openpyxl>=3.1.5.20250919",
    "types-pexpect>=4.9.0.20250916",
    "types-psutil>=7.2.1.20260116",
    "types-pygments>=2.19.0.20251121",
    "types-pysocks>=1.7.1.20251001",
    "types-python-dateutil>=2.9.0.20260124",
    "types-pytz>=2025.2.0.20251108",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "types-tabulate>=0.9.0.20241207",
    "types-tensorflow>=2.18.0.20260121",
    "types-tqdm>=4.67.0.20250809",
    "types-ujson>=5.10.0.20250822",
    "types-xlrd>=2.0.0.20251020",
    "types-xmltodict>=1.0.1.20260113",
]
